--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,31 +21,23 @@ const { title } = Astro.props;
 	</body>
 </html>
 <style is:global>
+  	@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
+		--Blue: hsl(227, 92%, 58%);
+		--Gunmetal: hsl(215, 31%, 21%);
+		--Dark-Electric-Blue: hsl(215, 17%, 45%);
+		--Borders: hsl(200, 24%, 88%);
+		--Pure-White: hsl(0, 0%, 100%);
+
 	}
+	* {
+   		margin: 0;
+    	padding: 0;
+	}
+	
 	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
+		font-family: Inter, system-ui, sans-serif;
+		font-size: 14px;
+		color: var(--Gunmetal);
 	}
 </style>
