--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,9 @@ import Card2 from '../components/Card2.astro';
 <Layout title="BMI Calculator.">
 	<main>
 		<div class="container">
+			<div class="row1">
+				<img src="images/logo.svg" alt="logo">
+			</div>
 			<div class="row2">
 				<img src="images/image-man-eating.webp" alt="man eating">
 				<div class="texto">
